@startuml MDD
skinparam style strictuml
skinparam ArrowThickness 2
skinparam ArrowColor #gray

hide empty members
title Modèle du domaine
      
  class ControleurCours {

  }

  class ControleurEnseignant {

  }

  class ControleurEtudiant {

  }

  class ControleurQuestion{

  }

  class ControleurQuestionnaire{

  }

  class ControleurDevoir{

  }
  

  class Université {
    listeEtudiant : Map<String,Etudiant>
    listeEnseignant : Map<String,Enseignant>
  }
  class Enseignant {
    prenom : String
    nom : String
    idtoken : String
    liste : Map<String,Cours>
  }

  class Etudiant {
    id : String
    nom : String
    prenom : String
  }

  class CoursGroupe {
    groupID : String
    day : String
    hours : String
    activity : String
    mode : String
    local : String
    teacherID : String
    listeEtudiant : Map<String,Etudiant>
    listeQuestionnaire : Map<String,Questionnaire>
    listeQuestion : Map<String,Question>
    listeDevoir : Map<String,Devoir>
    
  }

  class Question {
    titre : String
    description : String
    reponse : boolean
    texteVrai : String
    texteFaux : String
    categorie : String
    idGroupe : String
  }

  class Questionnaire {
    nom : String
    description : String
    actif: boolean
    listeQuestion : Map<String,Question>
    idCoursGroupe : String
  }

  class Devoir{
   titre : String
  description : String
  noteMax : number
  dateDebut : Date
  dateFin : Date
  etat : boolean
  groupId : String
  }

' --- Classes de l’itération 1 (rouge) ---
class CoursGroupe #FFB3B3
class Enseignant #FFB3B3
class Etudiant #FFB3B3
class Université #FFB3B3
class ControleurCours #FFB3B3
class ControleurEnseignant #FFB3B3
class ControleurEtudiant #FFB3B3
' --- Classes de l’itération 2 (vert) ---
class Questionnaire #B3FFB3
class ControleurQuestionnaire #B3FFB3
class ControleurQuestion #B3FFB3
class Question #B3FFB3
' --- Classes de l’itération 3 (bleu) ---
class Devoir #B3D9FF
class ControleurDevoir #B3D9FF

' associations

Enseignant "1" -- "*" CoursGroupe : Enseigne > 
Etudiant "1" -- "*" CoursGroupe : Suit un >
Université "1" -- "*" Etudiant : inscrit dans <
Université "1" -- "*" Enseignant : travail dans <
Questionnaire "1" -- "*" Question : regroupe >
CoursGroupe "1" -- "*" Questionnaire : propose >
CoursGroupe "1" -- "*" Devoir : propose >

ControleurEtudiant "1" -- "*" Etudiant : gere >
ControleurEnseignant "1" -- "*" Enseignant : gere >
ControleurCours "1" -- "*" CoursGroupe : gere >
ControleurQuestion "1" -- "*" Question : gere >
ControleurQuestionnaire "1" -- "*" Questionnaire : gere >
ControleurDevoir "1" -- "*" Devoir : gere >

legend right
    | Couleur | Type |
    |<#FFB3B3>| Itération 1 |
    |<#B3FFB3>| Itération 2 |
    |<#B3D9FF>| Itération 3 |
endlegend

@enduml